--- a/SkillCoacher/Pages/LogIn.cshtml
+++ b/SkillCoacher/Pages/LogIn.cshtml
@@ -5,36 +5,14 @@
     ViewData["Title"] = "Login  page";
 }
 
-@*<div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <form method="post">
-
-
-            <label>login</label>
-            <br />
-            <input asp-for="NewUser.Login" class="form-control" />
-            <br />
-            <label>password</label>
-            <br />
-            <input asp-for="NewUser.Password" class="form-control" />
-            <br />
-            <label>repeat password</label>
-            <br />
-            <input class="form-control" />
-            <br />
-            <button type="submit">Зарегистрироваться</button>
-
-        </form>
-    </div>
-*@
 <form class="form-signin text-center" method="post">
-    <h1 class="h3 mb-3 font-weight-normal">Регистрация</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Авторизация</h1>
     <label for="inputEmail" class="sr-only">Email</label>
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" asp-for="LogInUser.Login" required autofocus>
     <label for="inputPassword" class="sr-only">Пароль</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" asp-for="LogInUser.Password" required>
    
     <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+    <a asp-page="/SignUp">Зарегистрироваться</a>
     <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
 </form>
