--- a/SkillCoacher/Pages/SignUp.cshtml
+++ b/SkillCoacher/Pages/SignUp.cshtml
@@ -6,29 +6,6 @@
     ViewData["Title"] = "Sign up page";
 }
 
-@*<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <form method="post">
-
-
-        <label>login</label>
-        <br />
-        <input asp-for="NewUser.Login" class="form-control" />
-        <br />
-        <label>password</label>
-        <br />
-        <input asp-for="NewUser.Password" class="form-control" />
-        <br />
-        <label>repeat password</label>
-        <br />
-        <input class="form-control" />
-        <br />
-        <button type="submit">Зарегистрироваться</button>
-
-    </form>
-</div>
-*@
 <form class="form-signin text-center" method="post">
     <h1 class="h3 mb-3 font-weight-normal">Регистрация</h1>
     <label for="inputEmail" class="sr-only">Email</label>
@@ -40,5 +17,6 @@
     <div class="checkbox mb-3">
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
+    <a asp-page="Login">Войти</a>
     <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
 </form>
