--- a/SkillCoacher/Pages/Index.cshtml
+++ b/SkillCoacher/Pages/Index.cshtml
@@ -18,32 +18,33 @@
         <div class="col-md-6" id="courses">
             <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static" id="@item.Id">
-                   
+
                     <h3 class="mb-0">@item.Name</h3>
                     <div class="mb-1 text-muted">@item.DateOfPublication.ToShortDateString()</div>
                     <p class="mb-auto">@item.Description.</p>
-                    <a asp-page="/CoursePage" asp-route-Id="@item.Id">Продолжить чтение</a>
-                    @if (Model.CurrentUser != null)
-                    {
-                        if (Model.CurrentUser.FavoriteCourses.Count(c => c.Id == item.Id) > 0)
+                    <p class="mb-auto">@item.Description.<a asp-page="/CoursePage" asp-route-Id="@item.Id"> Читать далее.</a></p>
+                    <div class="col pt-lg-2">
+                        @if (Model.CurrentUser != null)
                         {
-                            <button id="subscribe" onclick="AddToFavorite(@item.Id);">Отписаться</button>
+                            if (Model.CurrentUser.FavoriteCourses.Count(c => c.Id == item.Id) > 0)
+                            {
+                                <button id="subscribe" type="button" class="btn btn-dark" onclick="AddToFavorite(@item.Id);">Отписаться</button>
+                            }
+                            else
+                            {
+                                <button id="subscribe" type="button" class="btn btn-dark" onclick="AddToFavorite(@item.Id);">Подписаться</button>
+                            }
                         }
-                        else
+                        @foreach (var tag in item?.Tags)
                         {
-                            <button id="subscribe" onclick="AddToFavorite(@item.Id);">Подписаться</button>
+                            <span class="badge badge-info" style="margin-block: 80px;">@tag.Name</span>
                         }
-                    }
+                    </div>
+                    </div>
+                    <div class="col-auto d-none d-lg-block">
+                        <img class="img-thumbnail" width="200" height="250" src="images/@item.TitleImagePath" />
+                    </div>
                 </div>
-                <div class="col-auto d-none d-lg-block">
-                    <img class="img-thumbnail" width="200" height="250" src="images/@item.TitleImagePath" />
-                    @*<svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>*@
-                </div>
-                @foreach (var tag in item?.Tags)
-                {
-                    <ul>@tag.Name</ul>
-                }
-            </div>
         </div>
     }
 </div>
