--- a/SkillCoacher/Pages/OwnedCourses.cshtml
+++ b/SkillCoacher/Pages/OwnedCourses.cshtml
@@ -14,11 +14,9 @@
             <div class="col-md-6">
                 <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success">Design</strong>
                         <h3 class="mb-0">@item.Name</h3>
-                        <div class="mb-1 text-muted">Nov 11</div>
                         <p class="mb-auto">@item.Description.</p>
-                        <a asp-page="/SubmitCourse" asp-route-Id="@item.Id" class="stretched-link">Edit</a>
+                        <a asp-page="/SubmitCourse" asp-route-Id="@item.Id" class="stretched-link">Изменить</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
                         <img class="img-thumbnail" width="200" height="250" src="images/@item.TitleImagePath" />
