--- a/SkillCoacher/Pages/Index.cshtml
+++ b/SkillCoacher/Pages/Index.cshtml
@@ -31,7 +31,7 @@
                             }
                             else
                             {
-                                <button id="subscribe"  class="btn btn-dark" onclick="AddToFavorite(@item.Id);">Подписаться</button>
+                                <button id="subscribe" class="btn btn-primary" onclick="AddToFavorite(@item.Id);">Начать курс</button>
                             }
                         }
                         @foreach (var tag in item?.Tags)
