--- a/SkillCoacher/Pages/Shared/_Layout.cshtml
+++ b/SkillCoacher/Pages/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                     </ul>
                 </div>
             </nav>
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 pt-xl-5">
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 pt-xl-5 mt-xl-5">
                 <div class="pl-xl-1">
                     @RenderBody()
                 </div>
